Fixed Maximum Interaction weight bug Removed minimum width for bars and added a hover effect so its easy to see that its dragable removed vertical and horizontal scroll from minimap (may be problematic if the screen size is small and the content overflows) Now the attribute sliders freeze once rows start getting moved, and unfrozen when rank is complete (makes sense for useability)

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
 	height: 100vh;
 	float: left;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	background-color: white;
 	position: relative;
 	z-index: 20;
@@ -51,6 +52,7 @@ body {
 }
 
 #miniChart {
+	overflow-x: hidden;
 	overflow-y: scroll;
 	max-height: 100%;
 	max-width: 100%;
@@ -58,6 +60,7 @@ body {
 }
 
 #consoleChart {
+	overflow-x: hidden;
 	overflow-y: scroll;
 	max-height: 100%;
 	max-width: 100%;
